--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,8 +7,6 @@
     tools:context=".MainActivity"
     android:background="@color/Light_Green">
 
-
-
     <View
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
@@ -41,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Welcome"
+            android:textStyle="bold"
             android:textColor="@color/Dark_Green"
             android:textSize="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -55,6 +54,7 @@
             android:text="{Username}!"
             android:textColor="@color/Dark_Green"
             android:textSize="30dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
