--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
         android:layout_below="@id/llWelcome"
         android:id="@+id/llEntrySelector"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="45dp"
         android:orientation="horizontal">
 
 
@@ -89,20 +89,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20dp"
-            android:textColor="@color/white"
-            android:text="TextView" />
+            android:textSize="30dp"
+            android:textColor="@color/Input_Grey"
+            android:text="Sign In"
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/tvSignUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20dp"
-            android:textColor="@color/white"
-            android:text="TextView" />
+            android:textSize="30dp"
+            android:textColor="@color/Input_Grey"
+            android:text="Sign Up"
+            android:textAlignment="center"/>
+
+
 
     </LinearLayout>
+
+    <View
+        android:id="@+id/vwEntryMethod"
+        android:layout_width="140dp"
+        android:layout_height="5dp"
+        android:layout_below="@id/llEntrySelector"
+        android:layout_marginLeft="42dp"
+        android:background="@drawable/rounded_rectangle_input_grey" />
+
+
 
 
 </RelativeLayout>
