--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -77,16 +77,23 @@
         android:id="@+id/llActivityPage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <View
             android:layout_below="@id/llActivityPage"
             android:layout_marginTop="10dp"
             android:id="@+id/vwActivityBar"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:background="@drawable/rounded_rectangle_muted_green"/>
 
+        <View
+            android:layout_below="@id/vwActivityBar"
+            android:layout_marginTop="40dp"
+            android:id="@+id/vwActivityNames"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@drawable/rounded_rectangle_input_grey"/>
 
     </LinearLayout>
 
