--- a/app/src/main/res/drawable/rounded_rectangle.xml
+++ b/app/src/main/res/drawable/rounded_rectangle.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/Dark_Green" />
+    <solid android:color="@color/white" />
 
     <corners
         android:bottomLeftRadius="8dp"
