--- a/app/src/main/res/layout/activity_create_category.xml
+++ b/app/src/main/res/layout/activity_create_category.xml
@@ -14,7 +14,8 @@
         android:layout_height="76dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/rounded_rectangle_dark_green" />
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Dark_Green"/>
 
     <ImageView
         android:id="@+id/imgBlackTurtle"
@@ -69,7 +70,8 @@
         android:layout_height="620dp"
         android:layout_below="@id/llCreateCategory"
         android:layout_marginTop="10dp"
-        android:background="@drawable/backing_dark_green" />
+        android:background="@drawable/backing_shape"
+        android:backgroundTint="@color/Dark_Green"/>
 
     <LinearLayout
         android:id="@+id/llCategoryInput"
@@ -92,7 +94,8 @@
             android:id="@+id/etName"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:background="@drawable/rounded_rectangle_input_grey"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Name" />
@@ -109,7 +112,8 @@
             android:id="@+id/etColour"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:background="@drawable/rounded_rectangle_input_grey"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Colour" />
@@ -127,7 +131,8 @@
             android:id="@+id/etDiscription"
             android:layout_width="match_parent"
             android:layout_height="106dp"
-            android:background="@drawable/rounded_rectangle_input_grey"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Discription" />
