--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,7 +13,8 @@
         android:id="@+id/vwAppTitleBar"
         android:layout_width="4dp"
         android:layout_height="100dp"
-        android:background="@drawable/rounded_rectangle_dark_green"/>
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Dark_Green"/>
 
     <ImageView
         android:id="@+id/imgBlackTurtle"
@@ -67,7 +68,8 @@
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
         android:layout_height="600dp"
-        android:background="@drawable/backing_dark_green"/>
+        android:background="@drawable/backing_shape"
+        android:backgroundTint="@color/Dark_Green"/>
 
     <LinearLayout
         android:layout_marginLeft="20dp"
@@ -85,7 +87,8 @@
             android:id="@+id/vwActivityBar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/rounded_rectangle_muted_green"/>
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Muted_Green"/>
 
         <View
             android:layout_below="@id/vwActivityBar"
@@ -93,7 +96,8 @@
             android:id="@+id/vwActivityNames"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="@drawable/rounded_rectangle_input_grey"/>
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"/>
 
     </LinearLayout>
 
