--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:id="@+id/vwAppTitleBar"
         android:layout_width="4dp"
         android:layout_height="100dp"
-        android:background="@drawable/rounded_rectangle_dark_green"/>
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Dark_Green"/>
 
     <ImageView
         android:id="@+id/imgBlackTurtle"
@@ -71,7 +72,8 @@
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
         android:layout_height="620dp"
-        android:background="@drawable/backing_dark_green"/>
+        android:background="@drawable/backing_shape"
+        android:backgroundTint="@color/Dark_Green"/>
 
     <LinearLayout
         android:layout_marginLeft="20dp"
@@ -118,7 +120,8 @@
         android:layout_height="5dp"
         android:layout_below="@id/llEntrySelector"
         android:layout_marginLeft="42dp"
-        android:background="@drawable/rounded_rectangle_input_grey" />
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Input_Grey"/>
 
 
 
