--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -92,13 +92,39 @@
 
         <View
             android:layout_below="@id/vwActivityBar"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:id="@+id/vwActivityNames"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="70dp"
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@color/Input_Grey"/>
 
+        <View
+            android:layout_below="@id/vwActivityBar"
+            android:layout_marginTop="30dp"
+            android:id="@+id/vwActivityNames2"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"/>
+
+        <View
+            android:layout_below="@id/vwActivityBar"
+            android:layout_marginTop="30dp"
+            android:id="@+id/vwActivityNames3"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"/>
+
+        <View
+            android:layout_below="@id/vwActivityBar"
+            android:layout_marginTop="30dp"
+            android:id="@+id/vwActivityNames4"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"/>
     </LinearLayout>
 
 </RelativeLayout>
