--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -125,6 +125,17 @@
             android:layout_height="70dp"
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@color/Input_Grey"/>
+
+        <View
+            android:id="@+id/vwActivityBar2"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/vwActivityBar"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey" />
     </LinearLayout>
 
 </RelativeLayout>
