--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -90,33 +90,36 @@
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@color/Muted_Green"/>
 
-        <View
-            android:layout_below="@id/vwActivityBar"
-            android:layout_marginTop="30dp"
-            android:id="@+id/vwActivityNames"
+        <TextView
+            android:id="@+id/txtActivty"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@drawable/rounded_item_box"
-            android:backgroundTint="@color/Input_Grey"/>
+            android:layout_height="65dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/rounded_rectangle"
+            android:text="TextView" />
 
-        <View
-            android:id="@+id/vwActivityBar2"
-            android:layout_width="250dp"
+        <Button
+            android:id="@+id/button"
+            android:layout_width="220dp"
             android:layout_height="50dp"
-            android:layout_below="@id/vwActivityBar"
-            android:layout_marginTop="330dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="350dp"
             android:background="@drawable/rounded_item_box"
-            android:backgroundTint="@color/Input_Grey" />
+            android:text=""
+            android:theme="@style/button_colour_white"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imgTurtleActivityBar"
-        android:layout_width="70dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="642dp"
-        android:layout_marginLeft="170dp"
-        app:srcCompat="@drawable/cyanturtle" />
+    <TextView
+        android:id="@+id/txtActivityBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="167dp"
+        android:layout_marginLeft="142dp"
+        android:text="Activities"
+        android:textStyle="bold"
+        android:textSize="30dp" />
+
 </RelativeLayout>
