--- a/app/src/main/res/layout/activity_create_category.xml
+++ b/app/src/main/res/layout/activity_create_category.xml
@@ -31,7 +31,7 @@
         android:id="@+id/llCreateCategory"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="8dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_toRightOf="@id/vwAppTitleBar">
