--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="Dark_Green">#2F3E46</color>
     <color name="Muted_Green">#606D63</color>
     <color name="Input_Grey">#F7F7F7</color>
+    <color name="Activity_Yellow">#FFE082</color>
 </resources>
