--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="600dp"
     android:background="@color/Dark_Green">
 
     <View
-        android:id="@+id/vwEntryMethod"
+        android:id="@+id/vwEntryMethodBar"
         android:layout_width="140dp"
         android:layout_height="5dp"
         android:layout_marginTop="1dp"
@@ -13,16 +14,161 @@
         android:background="@drawable/rounded_rectangle"
         android:backgroundTint="@color/Input_Grey"/>
 
+
+
+
+    <ImageView
+        android:id="@+id/imgCyanTurtle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:srcCompat="@drawable/cyanturtle"
+        android:layout_marginLeft="320dp"
+        android:layout_marginTop="15dp"
+        android:rotation="-125"
+        android:layout_below="@id/vwEntryMethodBar"/>
+
     <TextView
-        android:id="@+id/tvSignUp"
+        android:id="@+id/tvEmailPrompt"
+        android:layout_below="@id/imgCyanTurtle"
+        android:layout_marginTop="-26dp"
+        android:layout_marginLeft="64dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:textColor="@color/Input_Grey"
-        android:text="Sign Up"
+        android:text="Email:"
         android:textAlignment="center"
+        />
+
+
+    <EditText
+        android:layout_marginTop="2dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/tvEmailPrompt"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/etEmail"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:background="@drawable/rounded_rectangle"
+        android:padding="5dp"/>
+
+    <TextView
+        android:id="@+id/tvUsernamePrompt"
+        android:layout_below="@id/etEmail"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Username:"
+        android:textAlignment="center"
+        />
+
+
+    <EditText
+        android:layout_marginTop="2dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/tvUsernamePrompt"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/etUsername"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:background="@drawable/rounded_rectangle"
+        android:padding="5dp"/>
+
+    <TextView
+        android:id="@+id/tvPasswordPrompt"
+        android:layout_below="@id/etUsername"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Password:"
+        android:textAlignment="center"
+        />
+
+
+    <EditText
+        android:layout_marginTop="2dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/tvPasswordPrompt"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/etPassword"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:background="@drawable/rounded_rectangle"
+        android:padding="5dp"/>
+
+
+    <TextView
+        android:id="@+id/tvSignUpButton"
+        android:layout_below="@id/etPassword"
+        android:layout_marginTop="34dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="24dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Sign In"
+        android:textAlignment="center"
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Muted_Green"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="60dp"
+        android:textStyle="bold"
         android:onClick="onClick"
         android:clickable="true"/>
+
+    <TextView
+        android:id="@+id/tvNeedHelpButton"
+        android:layout_below="@id/tvSignUpButton"
+        android:layout_marginTop="4dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="16dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Need Help?"
+        android:textAlignment="center"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="60dp"
+        android:textStyle="bold"
+        android:onClick="onClick"
+        android:clickable="true"/>
+
+
+    <ImageView
+        android:id="@+id/imgBrownTurtle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="-30dp"
+        android:layout_marginLeft="290dp"
+        android:rotation="10"
+        app:srcCompat="@drawable/greenturtle"
+        android:layout_below="@id/tvNeedHelpButton"/>
+
+    <ImageView
+        android:id="@+id/imgGreenTurtle"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="-16dp"
+        android:rotation="-20"
+        app:srcCompat="@drawable/brownturtle"
+        android:layout_below="@id/tvNeedHelpButton"/>
 
 </RelativeLayout>
