--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -81,6 +81,7 @@
         android:layout_marginRight="20dp"
         android:orientation="vertical">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -143,17 +144,61 @@
         <TextView
             android:id="@+id/tvDescription"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="98dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rounded_rectangle"
             android:text="Description" />
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnClick1"
+                android:layout_width="180dp"
+                android:layout_height="50dp"
+                android:background="@drawable/rounded_item_box"
+                android:text="Button"
+                android:layout_marginTop="20dp"
+                android:theme="@style/button_colour_white" />
+
+            <Button
+                android:id="@+id/btnClick2"
+                android:layout_width="180dp"
+                android:layout_height="50dp"
+                android:background="@drawable/rounded_item_box"
+                android:theme="@style/button_colour_white"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:text="Button" />
+        </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical">
 
 
+        <ImageView
+            android:id="@+id/imgTurtle1"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="588dp"
+            android:layout_marginLeft="80dp"
+            app:srcCompat="@drawable/cyanturtle" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgTurtle2"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="588dp"
+        android:layout_marginLeft="270dp"
+        app:srcCompat="@drawable/brownturtle" />
 </RelativeLayout>
