--- a/app/src/main/res/layout/activity_create_goal.xml
+++ b/app/src/main/res/layout/activity_create_goal.xml
@@ -5,6 +5,129 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Create_Goal"
-    android:background="@color/Muted_Green">
+    android:background="@color/Light_Green">
+
+    <View
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/vwAppTitleBar"
+        android:layout_width="4dp"
+        android:layout_height="90dp"
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Dark_Green"/>
+
+    <LinearLayout
+        android:id="@+id/llScreenHeading"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_toRightOf="@id/vwAppTitleBar">
+
+        <TextView
+            android:id="@+id/tvScreenFunction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create"
+            android:textSize="30dp"
+            android:layout_marginTop="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/Dark_Green"/>
+
+        <TextView
+            android:id="@+id/tvScreenSubject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Goal"
+            android:textStyle="bold"
+            android:textSize="40dp"
+            android:layout_marginTop="-10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/Dark_Green"/>
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgBlackTurtle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:srcCompat="@drawable/cogturtle"
+        android:layout_marginLeft="320dp"
+        android:layout_marginTop="10dp"
+        android:rotation="-45"
+        />
+
+    <View
+        android:layout_below="@id/llScreenHeading"
+        android:layout_marginTop="20dp"
+        android:id="@+id/vwBackingBoard"
+        android:layout_width="match_parent"
+        android:layout_height="640dp"
+        android:background="@drawable/backing_shape"
+        android:backgroundTint="@color/Dark_Green"/>
+
+    <TextView
+        android:id="@+id/tvActivityName"
+        android:layout_below="@id/llScreenHeading"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Activity"
+        android:textAlignment="center"
+        />
+
+
+
+    <TextView
+        android:text="TextView"
+        android:layout_marginTop="4dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/tvActivityName"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/tvActivity"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textSize="14dp"
+        android:background="@drawable/rounded_rectangle"
+        android:padding="8dp"/>
+
+    <TextView
+        android:id="@+id/tvGoalHeading"
+        android:layout_below="@id/tvActivity"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Goals"
+        android:textAlignment="center"
+        />
+
+    <LinearLayout
+        android:id="@+id/llGoalTypes"
+        android:layout_width="300dp"
+        android:layout_height="160dp"
+        android:layout_below="@id/tvGoalHeading"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Input_Grey"
+        android:orientation="horizontal"/>
+
+
 
 </RelativeLayout>
