--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -136,7 +136,7 @@
         android:layout_height="50dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="161dp"
-        android:text="<"
+        android:text="B"
         android:textSize="40dp" />
 
     <TextView
@@ -145,7 +145,7 @@
         android:layout_height="50dp"
         android:layout_marginLeft="340dp"
         android:layout_marginTop="161dp"
-        android:text=">"
+        android:text="F"
         android:textSize="40dp" />
 
 </RelativeLayout>
