--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -10,7 +10,7 @@
     <View
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:id="@+id/vwAppTitleBar"
+        android:id="@+id/vwLogsBar"
         android:layout_width="4dp"
         android:layout_height="70dp"
         android:background="@drawable/rounded_rectangle"
@@ -32,7 +32,7 @@
         android:layout_height="86dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@id/vwAppTitleBar"
+        android:layout_toRightOf="@id/vwLogsBar"
         android:orientation="vertical">
 
         <TextView
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvAppTitleName"
+            android:id="@+id/tvCategoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Activity"
