--- a/app/src/main/res/layout/activity_create_goal.xml
+++ b/app/src/main/res/layout/activity_create_goal.xml
@@ -10,7 +10,7 @@
     <View
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:id="@+id/vwAppTitleBar"
+        android:id="@+id/vwLogsBar"
         android:layout_width="4dp"
         android:layout_height="90dp"
         android:background="@drawable/rounded_rectangle"
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_toRightOf="@id/vwAppTitleBar">
+        android:layout_toRightOf="@id/vwLogsBar">
 
         <TextView
             android:id="@+id/tvScreenFunction"
