--- a/app/src/main/res/layout/activity_logs_list.xml
+++ b/app/src/main/res/layout/activity_logs_list.xml
@@ -37,11 +37,11 @@
 
 
         <TextView
-            android:id="@+id/tvCategoryName"
+            android:id="@+id/tvLogs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="{CategoryName}!"
+            android:text="Logs"
             android:textColor="@color/Dark_Green"
             android:textSize="30dp"
             android:textStyle="bold"
@@ -63,7 +63,7 @@
     <LinearLayout
         android:id="@+id/llListPage"
         android:layout_width="391dp"
-        android:layout_height="569dp"
+        android:layout_height="636dp"
         android:layout_below="@+id/llLogsHome"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
@@ -71,73 +71,45 @@
         android:orientation="vertical">
 
         <View
-            android:id="@+id/vwActivityBar"
+            android:id="@+id/vwListBar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@color/Muted_Green" />
 
         <TextView
-            android:id="@+id/tvDescription"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Description of Category"
-            android:textColor="@color/white"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/txtCategoryDescription"
-            android:layout_width="match_parent"
-            android:layout_height="85dp"
+            android:id="@+id/tvLogsDateHeading"
+            android:layout_width="200dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/rounded_rectangle"
-            android:text="" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="Start Date/End Date" />
+
+        <EditText
+            android:id="@+id/txtDate"
+            android:layout_width="280dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:ems="10"
+            android:inputType="date"
+            tools:ignore="SpeakableTextPresentCheck" />
+
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvActivityBar"
+        android:id="@+id/tvList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginLeft="138dp"
-        android:text="Activities"
+        android:layout_marginLeft="180dp"
+        android:text="List"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="30dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/llListPage"
-        android:id="@+id/llCategoryButton"
-        android:orientation="horizontal">
-
-
-        <Button
-            android:id="@+id/btnClick"
-            android:layout_width="165dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/rounded_item_box"
-            android:text=""
-            android:theme="@style/button_colour_white"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-
-        <Button
-            android:id="@+id/btnClick2"
-            android:layout_width="165dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="22dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/rounded_item_box"
-            android:text=""
-            android:theme="@style/button_colour_white"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-    </LinearLayout>
 
     <TextView
         android:id="@+id/TvLeft"
@@ -148,21 +120,31 @@
         android:text="B"
         android:textSize="40dp" />
 
+    <TextView
+        android:id="@+id/TvRight"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginLeft="340dp"
+        android:layout_marginTop="93dp"
+        android:text="F"
+        android:textSize="40dp" />
+
     <ImageView
         android:id="@+id/imgTurtle"
-        android:layout_width="70dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="675dp"
-        android:layout_marginLeft="70dp"
+        android:layout_width="100dp"
+        android:layout_height="118dp"
+        android:layout_marginTop="605dp"
+        android:layout_marginLeft="20dp"
+        android:rotation="-45"
         app:srcCompat="@drawable/cyanturtle" />
 
     <ImageView
         android:id="@+id/imgTurtle2"
         android:layout_width="70dp"
         android:layout_height="48dp"
-        android:layout_marginTop="675dp"
-        android:layout_marginLeft="255dp"
-        app:srcCompat="@drawable/brownturtle" />
+        android:layout_marginTop="655dp"
+        android:layout_marginLeft="330dp"
+        app:srcCompat="@drawable/greenturtle" />
 
 
 </RelativeLayout>
