--- a/app/src/main/res/layout/activity_logs_list.xml
+++ b/app/src/main/res/layout/activity_logs_list.xml
@@ -27,7 +27,7 @@
         />
 
     <LinearLayout
-        android:id="@+id/llLogsCalendar"
+        android:id="@+id/llLogsCategory"
         android:layout_width="374dp"
         android:layout_height="65dp"
         android:layout_marginLeft="10dp"
@@ -52,7 +52,7 @@
     </LinearLayout>
 
     <View
-        android:layout_below="@+id/llLogsCalendar"
+        android:layout_below="@+id/llLogsCategory"
         android:layout_marginTop="0dp"
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
@@ -61,17 +61,17 @@
         android:backgroundTint="@color/Dark_Green"/>
 
     <LinearLayout
-        android:id="@+id/llCalendarPage"
+        android:id="@+id/llCategoryPage"
         android:layout_width="391dp"
         android:layout_height="636dp"
-        android:layout_below="@+id/llLogsCalendar"
+        android:layout_below="@+id/llLogsCategory"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical">
 
         <View
-            android:id="@+id/vwCalendarBar"
+            android:id="@+id/vwCategoryBar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/rounded_rectangle"
