--- a/app/src/main/res/layout/customactivity.xml
+++ b/app/src/main/res/layout/customactivity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -19,8 +20,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="25dp"
         android:layout_toRightOf="@id/llNameText"
-        android:background="@drawable/rounded_rectangle"
-        android:backgroundTint="@color/Activity_Yellow"/>
+        android:background="@color/Activity_Yellow"/>
+
 
     <LinearLayout
         android:id="@+id/llNameText"
@@ -29,7 +30,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="30dp"
         android:orientation="horizontal">
-`
+        `
+
         <LinearLayout
             android:id="@+id/llText"
             android:layout_width="230dp"
@@ -55,8 +57,7 @@
             android:layout_width="7dp"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/rounded_rectangle"
-            android:backgroundTint="@color/Muted_Green"/>
+            android:background="@color/Muted_Green"/>
 
     </LinearLayout>
 
