--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,6 +4,7 @@
         <attr name="primarytext" format="string"/>
         <attr name="secondarytext" format="string"/>
         <attr name="blocktext" format="string"/>
+        <attr name="blockcolour" format="color"/>
         <attr name="xtext" format="string"/>
     </declare-styleable>
 </resources>
